--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
+/HybridCachingLibrary/obj/
+/HybridCachingLibrary/bin/
+
+/HybridCachingLibrary/bin/Debug/HybridCachingLibrary.1.0.0.nupkg
