--- a/HybridCachingLibrary/HybridCachingLibrary.csproj
+++ b/HybridCachingLibrary/HybridCachingLibrary.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="EasyCaching.HybridCache" Version="1.9.2" />
 		<PackageReference Include="EasyCaching.InMemory" Version="1.9.2" />
 		<PackageReference Include="EasyCaching.Redis" Version="1.9.2" />
+		<PackageReference Include="EasyCaching.Serialization.Json" Version="1.9.2" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
 </ItemGroup>
